force-app/main/default/objects/cdcpc__RD_Inlet_Ring_Part_Number__c/fields/cdcpc__InletRingPartNumber__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__InletRingPartNumber__c</fullName>
    <label>InletRingPartNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>