force-app/main/default/objects/cdcpc__RD_Inlet_Ring_Part_Number__c/fields/cdcpc__Leadtime__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Leadtime__c</fullName>
    <label>Leadtime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>