force-app/main/default/objects/cdcpc__RD_Inlet_Ring_Part_Number__c/fields/cdcpc__STC__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__STC__c</fullName>
    <label>STC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>