force-app/main/default/objects/cdcpc__RD_Inlet_Ring_Part_Number__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__InletRingPartNumber__c</columns>
    <columns>cdcpc__PTC__c</columns>
    <columns>cdcpc__STC__c</columns>
    <columns>cdcpc__SZC__c</columns>
    <columns>cdcpc__MCIR__c</columns>
    <columns>cdcpc__DSCVAR__c</columns>
    <columns>cdcpc__CSPECS__c</columns>
    <columns>cdcpc__Thickness__c</columns>
    <columns>cdcpc__SourceCode__c</columns>
    <columns>cdcpc__Thck_Code__c</columns>
    <columns>cdcpc__TestingCode__c</columns>
    <columns>cdcpc__OptionCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cdcpc__InletRingPartNumber__c</field>
        <operation>startsWith</operation>
        <value>RGT060000200LL005000000</value>
    </filters>
    <filters>
        <field>cdcpc__PTC__c</field>
        <operation>equals</operation>
        <value>LDV</value>
    </filters>
    <filters>
        <field>cdcpc__MCIR__c</field>
        <operation>equals</operation>
        <value>002</value>
    </filters>
    <label>All</label>
</ListView>